Start of componnents project

--- a/Article/Article.less
+++ b/Article/Article.less
@@ -9,6 +9,7 @@
   background-color: white;
   position: relative;
   height: 50px;
+  // Test
   overflow: hidden;
   box-shadow: 2px 2px 2px lightgrey;
 
@@ -44,7 +45,3 @@
 .article-open {
   height: 400px;
 }
-
-
-
-
